array.island.Island.scala.error
Compilation error:
Island:5: error: value lenght is not a member of Array[Int]
  for (i <- 0 to num.lenght() - 2) {
                     ^