array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var hauteur = 0
  var nb = 0
  for (i <- 0 to num.lenght() - 2) {
    if (num(i)>hauteur) {
      hauteur = num(i)
      nb = nb + 1
    }
    if (num(i)<hauteur) {
      hauteur = num(i)
    }
  }
  return nb
}